# RG_lab

./: .~lock.pixies.odt#
lab_1/: CMakeLists.txt
lab_1/resources/: path.txt
lab_1/src/: camera.cpp  camera.h  ideas.adi  line_strip.cpp  line_strip.h  main.cpp  normalized_object.cpp  normalized_object.h  object.cpp  object.h
lab_1/src/graphics/: context.cpp  context.h  framebuffer.cpp  framebuffer.h  shader.cpp  shader.h  texture.cpp  texture.h
lab_1/src/graphics/shaders/: draw_texture.sha  shader.sha  subtract_shader.sha  texture.sha  triangle.sha  triangle_lighting.sha  triangle_shader2D.sha
lab_1/src/graphics/util/: graphics_error.h  image_loader.cpp  image_loader.h
lab_1/src/util/: random.h  thread.h  timer.h  types.h
pixies/src/: PerlinNoise.h
pixies/src/Pixies/: Pixies.cpp  Pixies.h
